--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.lsc</groupId>
-	<artifactId>core</artifactId>
+	<artifactId>lsc-core</artifactId>
 	<name>Ldap Synchronization Connector</name>
 	<version>1.1-beta1</version>
 	<description>
