Removed dependency to com.sun. ... LdapURL Moved to org.ietf.ldap.LDAPUrl provided by JLDAP under OpenLDAP license.

--- a/pom.xml
+++ b/pom.xml
@@ -293,6 +293,11 @@
 			<artifactId>ldapbp</artifactId>
 			<version>1.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.novell.ldap</groupId>
+			<artifactId>jldap</artifactId>
+			<version>4.3</version>
+		</dependency>
 	</dependencies>
 	<reporting>
 		<outputDirectory>${basedir}/target/site</outputDirectory>
