Remove page size default option because OpenDS does not support it.

--- a/src/test/resources/lsc.properties
+++ b/src/test/resources/lsc.properties
@@ -4,7 +4,7 @@ dst.java.naming.security.authentication=simple
 dst.java.naming.security.principal=cn=Directory Manager
 dst.java.naming.security.credentials=secret
 dst.java.naming.ldap.version=3
-dst.java.naming.ldap.pageSize=1000
+#dst.java.naming.ldap.pageSize=1000
 #dst.java.naming.ldap.sortedBy=description
 dst.java.naming.ldap.derefAliases=never
 dst.java.naming.referral=ignore
