--- a/build.xml
+++ b/build.xml
@@ -1,7 +1,6 @@
 <project name="lsc-project" default="help" basedir="." xmlns:artifact="urn:maven-artifact-ant">
-  <path id="maven-ant-tasks.classpath" path="${basedir}/lib/maven-ant-tasks-2.0.7.jar" />
-  <typedef resource="org/apache/maven/artifact/ant/antlib.xml" uri="urn:maven-artifact-ant"
-           classpathref="maven-ant-tasks.classpath" />
+	<path id="maven-ant-tasks.classpath" path="${basedir}/lib/maven-ant-tasks-2.0.7.jar" />
+	<typedef resource="org/apache/maven/artifact/ant/antlib.xml" uri="urn:maven-artifact-ant" classpathref="maven-ant-tasks.classpath" />
 
 	<!-- look for properties in ~/.lsc-build.properties, ~/lsc.properties -->
 	<property file="${user.home}/.${ant.project.name}-build.properties" />
@@ -9,13 +8,13 @@
 	<property file="build.properties" />
 	<property environment="env" />
 
-	<property name="maven.localRepository" value="${user.home}/.m2/repository"/>
+	<property name="maven.localRepository" value="${user.home}/.m2/repository" />
 
 	<artifact:remoteRepository id="remote.repository" url="http://lsc-project.org/maven" />
 	<artifact:pom id="pom" file="${basedir}/pom.xml" />
 	<artifact:localRepository id="localcache" path="${maven.localRepository}" />
 	<artifact:dependencies pathId="maven.classpath">
-		<pom refid="pom"/>
+		<pom refid="pom" />
 		<remoteRepository refid="remote.repository" />
 		<localrepository refid="localcache" />
 	</artifact:dependencies>
@@ -117,9 +116,9 @@
         ===================================================================
 	-->
 	<target name="jar" depends="clean" description="Create the jar files">
-                <antcall target="compile-app">
-                        <param name="build.test-classes.dir" value="${build.dir}/test-classes" />
-                </antcall>
+		<antcall target="compile-app">
+			<param name="build.test-classes.dir" value="${build.dir}/test-classes" />
+		</antcall>
 
 		<tstamp>
 			<format property="tstamp" pattern="MM/dd/yyyy HH:mm" locale="en" />
@@ -183,17 +182,17 @@
 	<target name="javadoc" depends="init">
 		<mkdir dir="${javadoc.dir}" />
 		<javadoc access="protected" author="true" classpathref="execution.path" destdir="doc" doctitle="LSC" nodeprecated="false" nodeprecatedlist="false" noindex="false" nonavbar="false" notree="false" source="1.5" splitindex="true" use="true" version="true" verbose="false">
-			<sourcepath location="${src.main.path}/java"/>
-			<package name="org.lsc"/>
-			<package name="org.lsc.utils"/>
-			<package name="org.lsc.beans"/>
-			<package name="org.lsc.beans.syncoptions"/>
-			<package name="org.lsc.service"/>
-			<package name="org.lsc.jndi"/>
-			<package name="org.lsc.jndi.parser"/>
-			<package name="org.lsc.objects"/>
-			<package name="org.lsc.objects.flat"/>
-			<package name="org.lsc.persistence"/>
+			<sourcepath location="${src.main.path}/java" />
+			<package name="org.lsc" />
+			<package name="org.lsc.utils" />
+			<package name="org.lsc.beans" />
+			<package name="org.lsc.beans.syncoptions" />
+			<package name="org.lsc.service" />
+			<package name="org.lsc.jndi" />
+			<package name="org.lsc.jndi.parser" />
+			<package name="org.lsc.objects" />
+			<package name="org.lsc.objects.flat" />
+			<package name="org.lsc.persistence" />
 		</javadoc>
 		<tar destfile="${build.dir}/${ant.project.name}_doc.tar.bz2" compression="bzip2" basedir="${javadoc.dir}" />
 	</target>
@@ -236,17 +235,19 @@
 		<tar tarfile="${build.dir}/${ant.project.name}-${version}.tar.bz2" basedir="${build.dist.dir}/.." includes="**" compression="bzip2" />
 	</target>
 
-        <!--
+	<!--
         ===================================================================
           Check that the checkstyle component is available
         ===================================================================
         -->
-        <target name="checkcheckstyle">
-                <available file="${checkstyle.home}" type="dir" property="checkstyle.home.ok" />
-                <fail unless="checkstyle.home.ok" message="'checkstyle.home' must be set in build.properties" />
-                <path id="checkstyle.path"><fileset dir="${checkstyle.home}" includes="checkstyle*.jar" /></path>
+	<target name="checkcheckstyle">
+		<available file="${checkstyle.home}" type="dir" property="checkstyle.home.ok" />
+		<fail unless="checkstyle.home.ok" message="'checkstyle.home' must be set in build.properties" />
+		<path id="checkstyle.path">
+			<fileset dir="${checkstyle.home}" includes="checkstyle*.jar" />
+		</path>
 		<taskdef resource="checkstyletask.properties" classpathref="checkstyle.path" />
-        </target>
+	</target>
 
 	<!--
 	    ==================================================================
@@ -260,6 +261,19 @@
 			<formatter type="plain" />
 		</checkstyle>
 	</target>
+
+
+        <!--
+            ===================================================================
+              Start the ldap server
+            ===================================================================
+        -->
+        <target name="startLdapServer" description="Start the ldap server" depends="compile-app">
+                <java classname="org.lsc.utils.LdapServer" classpathref="execution.path" fork="true" maxmemory="32M" dir="${build.classes.dir}">
+                        <arg line="-a" />
+                </java>
+        </target>
+
 
 	<!--
         ===================================================================
