Don't instanciate all objects for JSEvaluator if they're not needed. Fixes #39.

--- a/src/test/resources/lsc.properties
+++ b/src/test/resources/lsc.properties
@@ -25,4 +25,5 @@ lsc.syncoptions.sampleTask = org.lsc.beans.syncoptions.PropertiesBasedSyncOption
 lsc.syncoptions.sampleTask.default.action = K
 lsc.syncoptions.sampleTask.sampleAttribute.action = K
 lsc.syncoptions.sampleTask.sampleAttribute.create_value = someSampleValue
-
+lsc.syncoptions.sampleTask.JsAttribute.action = F
+lsc.syncoptions.sampleTask.JsAttribute.default_value = srcLdap.sup("uid=jclarke,ou=people,dc=lsc-project,dc=net", 1)
