Add correct properties for JS test (ref last commit)

--- a/src/test/resources/lsc.properties
+++ b/src/test/resources/lsc.properties
@@ -26,4 +26,4 @@ lsc.syncoptions.sampleTask.default.action = K
 lsc.syncoptions.sampleTask.sampleAttribute.action = K
 lsc.syncoptions.sampleTask.sampleAttribute.create_value = someSampleValue
 lsc.syncoptions.sampleTask.JsAttribute.action = F
-lsc.syncoptions.sampleTask.JsAttribute.default_value = srcLdap.sup("uid=jclarke,ou=people,dc=lsc-project,dc=net", 1)
+lsc.syncoptions.sampleTask.JsAttribute.default_value = "uid=00000001" + ",ou=People,dc=lsc-project,dc=org"
