Fixes #89. Read properties in before cutting them up, to avoid ordering problems. Add test for delimiters in Properties

--- a/src/test/resources/lsc.properties
+++ b/src/test/resources/lsc.properties
@@ -27,3 +27,5 @@ lsc.syncoptions.sampleTask.sampleAttribute.action = K
 lsc.syncoptions.sampleTask.sampleAttribute.create_value = someSampleValue
 lsc.syncoptions.sampleTask.JsAttribute.action = F
 lsc.syncoptions.sampleTask.JsAttribute.default_value = "uid=00000001" + ",ou=People,dc=lsc-project,dc=org"
+lsc.syncoptions.sampleTask.DelimitedAttribute.delimiter = $
+lsc.syncoptions.sampleTask.DelimitedAttribute.force_value = "a"$"b" 
