Add a full test for ldap2ldap sync and clean. Refs #57.

--- a/src/test/resources/lsc.properties
+++ b/src/test/resources/lsc.properties
@@ -1,3 +1,12 @@
+src.java.naming.factory.initial=com.sun.jndi.ldap.LdapCtxFactory
+src.java.naming.provider.url=ldap://localhost:33389/dc=lsc-project,dc=org
+src.java.naming.security.authentication=simple
+src.java.naming.security.principal=cn=Directory Manager
+src.java.naming.security.credentials=secret
+src.java.naming.ldap.version=3
+src.java.naming.ldap.derefAliases=never
+src.java.naming.referral=ignore
+
 dst.java.naming.factory.initial=com.sun.jndi.ldap.LdapCtxFactory
 dst.java.naming.provider.url=ldap://localhost:33389/dc=lsc-project,dc=org
 dst.java.naming.security.authentication=simple
@@ -13,7 +22,7 @@ dst.java.naming.referral=ignore
 # All other values are prefixed by lsc.syncoptions
 ####
 
-lsc.tasks = sampleTask
+lsc.tasks = sampleTask, ldap2ldapTestTask
 
 lsc.tasks.sampleTask.type = db2ldap
 lsc.tasks.sampleTask.srcService = org.lsc.service.InetOrgPersonJdbcService
@@ -29,3 +38,30 @@ lsc.syncoptions.sampleTask.JsAttribute.action = F
 lsc.syncoptions.sampleTask.JsAttribute.default_value = "uid=00000001" + ",ou=People,dc=lsc-project,dc=org"
 lsc.syncoptions.sampleTask.DelimitedAttribute.delimiter = $
 lsc.syncoptions.sampleTask.DelimitedAttribute.force_value = "a"$"b" 
+
+lsc.tasks.ldap2ldapTestTask.type = ldap2ldap
+lsc.tasks.ldap2ldapTestTask.object = org.lsc.objects.person
+lsc.tasks.ldap2ldapTestTask.bean = org.lsc.beans.personBean
+lsc.tasks.ldap2ldapTestTask.dn = "cn=" + srcBean.getAttributeValueById("cn") + ",ou=ldap2ldap2TestTaskDst,ou=Test Data"
+lsc.tasks.ldap2ldapTestTask.srcService = org.lsc.jndi.SimpleJndiSrcService
+lsc.tasks.ldap2ldapTestTask.srcService.baseDn = ou=ldap2ldap2TestTaskSrc,ou=Test Data
+lsc.tasks.ldap2ldapTestTask.srcService.pivotAttrs = cn sn
+lsc.tasks.ldap2ldapTestTask.srcService.filterAll = (&(sn=*))
+lsc.tasks.ldap2ldapTestTask.srcService.filterId = (sn={sn})
+lsc.tasks.ldap2ldapTestTask.srcService.attrs = description cn sn userPassword
+lsc.tasks.ldap2ldapTestTask.dstService = org.lsc.jndi.SimpleJndiDstService
+lsc.tasks.ldap2ldapTestTask.dstService.baseDn = ou=ldap2ldap2TestTaskDst,ou=Test Data
+lsc.tasks.ldap2ldapTestTask.dstService.pivotAttrs = cn sn
+lsc.tasks.ldap2ldapTestTask.dstService.filterAll = (sn=*)
+lsc.tasks.ldap2ldapTestTask.dstService.filterId = (sn={sn})
+lsc.tasks.ldap2ldapTestTask.dstService.attrs = description cn objectClass userPassword sn telephoneNumber
+
+lsc.syncoptions.ldap2ldapTestTask = org.lsc.beans.syncoptions.PropertiesBasedSyncOptions
+lsc.syncoptions.ldap2ldapTestTask.default.delimiter = ,
+lsc.syncoptions.ldap2ldapTestTask.default.action = K
+lsc.syncoptions.ldap2ldapTestTask.description.action = F
+lsc.syncoptions.ldap2ldapTestTask.objectclass.action = F
+lsc.syncoptions.ldap2ldapTestTask.userPassword.action = F
+lsc.syncoptions.ldap2ldapTestTask.userPassword.force_value = "secret" + srcBean.getAttributeValueById("cn")
+lsc.syncoptions.ldap2ldapTestTask.telephoneNumber.action = K
+lsc.syncoptions.ldap2ldapTestTask.telephoneNumber.create_value = "000000", "11111"
