Improve Ldap2LdapSyncTest

--- a/src/test/resources/lsc.properties
+++ b/src/test/resources/lsc.properties
@@ -59,9 +59,11 @@ lsc.tasks.ldap2ldapTestTask.dstService.attrs = description cn objectClass userPa
 lsc.syncoptions.ldap2ldapTestTask = org.lsc.beans.syncoptions.PropertiesBasedSyncOptions
 lsc.syncoptions.ldap2ldapTestTask.default.delimiter = ,
 lsc.syncoptions.ldap2ldapTestTask.default.action = K
-lsc.syncoptions.ldap2ldapTestTask.description.action = F
+lsc.syncoptions.ldap2ldapTestTask.description.action = M
+lsc.syncoptions.ldap2ldapTestTask.description.default_value = srcBean.getAttributeValueById("userPassword")
 lsc.syncoptions.ldap2ldapTestTask.objectclass.action = F
 lsc.syncoptions.ldap2ldapTestTask.userPassword.action = F
 lsc.syncoptions.ldap2ldapTestTask.userPassword.force_value = "secret" + srcBean.getAttributeValueById("cn")
-lsc.syncoptions.ldap2ldapTestTask.telephoneNumber.action = K
+lsc.syncoptions.ldap2ldapTestTask.telephoneNumber.action = M
 lsc.syncoptions.ldap2ldapTestTask.telephoneNumber.create_value = "000000", "11111"
+lsc.syncoptions.ldap2ldapTestTask.telephoneNumber.default_value = "123456", "789987"
