Fixing new LSC core without generation to fit tests

--- a/src/test/resources/lsc.properties
+++ b/src/test/resources/lsc.properties
@@ -27,11 +27,13 @@ lsc.tasks = sampleTask, ldap2ldapTestTask
 lsc.tasks.sampleTask.type = db2ldap
 lsc.tasks.sampleTask.srcService = org.lsc.service.InetOrgPersonJdbcService
 lsc.tasks.sampleTask.dstService = org.lsc.jndi.InetOrgPersonJndiService
-lsc.tasks.sampleTask.object = org.lsc.objects.inetOrgPerson
+# lsc.tasks.sampleTask.object = org.lsc.objects.inetOrgPerson
 lsc.tasks.sampleTask.bean = org.lsc.beans.inetOrgPersonBean
 
 lsc.syncoptions.sampleTask = org.lsc.beans.syncoptions.PropertiesBasedSyncOptions
 lsc.syncoptions.sampleTask.default.action = K
+lsc.syncoptions.sampleTask.objectClass.action = K
+lsc.syncoptions.sampleTask.objectClass.default_value = "inetOrgPerson", "organizationalPerson", "person", "top"
 lsc.syncoptions.sampleTask.sampleAttribute.action = K
 lsc.syncoptions.sampleTask.sampleAttribute.create_value = someSampleValue
 lsc.syncoptions.sampleTask.JsAttribute.action = F
@@ -40,7 +42,6 @@ lsc.syncoptions.sampleTask.DelimitedAttribute.delimiter = $
 lsc.syncoptions.sampleTask.DelimitedAttribute.force_value = "a"$"b" 
 
 lsc.tasks.ldap2ldapTestTask.type = ldap2ldap
-lsc.tasks.ldap2ldapTestTask.object = org.lsc.objects.person
 lsc.tasks.ldap2ldapTestTask.bean = org.lsc.beans.personBean
 lsc.tasks.ldap2ldapTestTask.dn = "cn=" + srcBean.getAttributeValueById("cn") + ",ou=ldap2ldap2TestTaskDst,ou=Test Data"
 lsc.tasks.ldap2ldapTestTask.srcService = org.lsc.jndi.SimpleJndiSrcService
@@ -62,6 +63,7 @@ lsc.syncoptions.ldap2ldapTestTask.default.action = K
 lsc.syncoptions.ldap2ldapTestTask.description.action = M
 lsc.syncoptions.ldap2ldapTestTask.description.default_value = srcBean.getAttributeValueById("userPassword")
 lsc.syncoptions.ldap2ldapTestTask.objectclass.action = F
+lsc.syncoptions.ldap2ldapTestTask.objectclass.default_value = "person", "top"
 lsc.syncoptions.ldap2ldapTestTask.userPassword.action = F
 lsc.syncoptions.ldap2ldapTestTask.userPassword.force_value = "secret" + srcBean.getAttributeValueById("cn")
 lsc.syncoptions.ldap2ldapTestTask.telephoneNumber.action = M
