Don't use legacy database.properties file anymore. All configuration is in lsc.properties. Add a simple JDBC source service that can be configured from lsc.properties

--- a/src/test/resources/lsc.properties
+++ b/src/test/resources/lsc.properties
@@ -18,13 +18,30 @@ dst.java.naming.ldap.version=3
 dst.java.naming.ldap.derefAliases=never
 dst.java.naming.referral=ignore
 
+###################
+# Source database #
+###################
+# This section can safely be deleted if you are not using db2ldap synchronization.
+
+# Java class name of the JDBC driver to use for this database
+src.database.driver = org.hsqldb.jdbcDriver
+
+# Connection URL. This must include the database name.
+src.database.url = jdbc:hsqldb:hsql://localhost/test
+
+# User name to connect to the database with
+src.database.username = sa
+
+# Password to connect to the database with
+src.database.password =
+
+
 ####
 # All other values are prefixed by lsc.syncoptions
 ####
 
-lsc.tasks = sampleTask, ldap2ldapTestTask
+lsc.tasks = sampleTask, ldap2ldapTestTask, db2ldapTestTask
 
-lsc.tasks.sampleTask.type = db2ldap
 lsc.tasks.sampleTask.srcService = org.lsc.service.InetOrgPersonJdbcService
 lsc.tasks.sampleTask.dstService = org.lsc.jndi.InetOrgPersonJndiService
 # lsc.tasks.sampleTask.object = org.lsc.objects.inetOrgPerson
@@ -41,7 +58,6 @@ lsc.syncoptions.sampleTask.JsAttribute.default_value = "uid=00000001" + ",ou=Peo
 lsc.syncoptions.sampleTask.DelimitedAttribute.delimiter = $
 lsc.syncoptions.sampleTask.DelimitedAttribute.force_value = "a"$"b" 
 
-lsc.tasks.ldap2ldapTestTask.type = ldap2ldap
 lsc.tasks.ldap2ldapTestTask.bean = org.lsc.beans.personBean
 lsc.tasks.ldap2ldapTestTask.dn = "cn=" + srcBean.getAttributeValueById("cn") + ",ou=ldap2ldap2TestTaskDst,ou=Test Data"
 lsc.tasks.ldap2ldapTestTask.srcService = org.lsc.jndi.SimpleJndiSrcService
@@ -69,3 +85,31 @@ lsc.syncoptions.ldap2ldapTestTask.userPassword.force_value = "secret" + srcBean.
 lsc.syncoptions.ldap2ldapTestTask.telephoneNumber.action = M
 lsc.syncoptions.ldap2ldapTestTask.telephoneNumber.create_value = "000000", "11111"
 lsc.syncoptions.ldap2ldapTestTask.telephoneNumber.default_value = "123456", "789987"
+
+lsc.tasks.db2ldapTestTask.bean = org.lsc.beans.personBean
+lsc.tasks.db2ldapTestTask.dn = "cn=" + srcBean.getAttributeValueById("givenName") + " " + + srcBean.getAttributeValueById("sn") + ",ou=db2ldap2TestTaskDst,ou=Test Data"
+lsc.tasks.db2ldapTestTask.srcService = org.lsc.service.SimpleJdbcSrcService
+lsc.tasks.db2ldapTestTask.srcService.requestNameForList = getListTestDb2Ldap
+lsc.tasks.db2ldapTestTask.srcService.requestNameForObject = getObjectTestDb2Ldap
+lsc.tasks.db2ldapTestTask.dstService = org.lsc.jndi.SimpleJndiDstService
+lsc.tasks.db2ldapTestTask.dstService.baseDn = ou=db2ldap2TestTaskDst,ou=Test Data
+lsc.tasks.db2ldapTestTask.dstService.pivotAttrs = givenName sn
+lsc.tasks.db2ldapTestTask.dstService.filterAll = (&(sn=*)(givenName=*))
+lsc.tasks.db2ldapTestTask.dstService.filterId = (&(sn={sn})(givenName={givenName}))
+lsc.tasks.db2ldapTestTask.dstService.attrs = description cn objectClass userPassword sn mail
+
+lsc.syncoptions.db2ldapTestTask = org.lsc.beans.syncoptions.PropertiesBasedSyncOptions
+lsc.syncoptions.db2ldapTestTask.default.delimiter = ,
+lsc.syncoptions.db2ldapTestTask.default.action = K
+lsc.syncoptions.db2ldapTestTask.description.action = M
+lsc.syncoptions.db2ldapTestTask.description.default_value = srcBean.getAttributeValueById("userPassword")
+lsc.syncoptions.db2ldapTestTask.objectclass.action = F
+lsc.syncoptions.db2ldapTestTask.objectclass.default_value = "person", "top", "organizationalPerson", "inetOrgPerson"
+lsc.syncoptions.db2ldapTestTask.userPassword.action = F
+lsc.syncoptions.db2ldapTestTask.userPassword.force_value = srcBean.getAttributeValueById("password")
+lsc.syncoptions.db2ldapTestTask.cn.action = F
+lsc.syncoptions.db2ldapTestTask.cn.force_value = srcBean.getAttributeValueById("givenName") + " " + + srcBean.getAttributeValueById("sn")
+lsc.syncoptions.db2ldapTestTask.telephoneNumber.action = M
+lsc.syncoptions.db2ldapTestTask.telephoneNumber.create_value = "000000", "11111"
+lsc.syncoptions.db2ldapTestTask.telephoneNumber.default_value = "123456", "789987"
+
