--- a/pom.xml
+++ b/pom.xml
@@ -165,7 +165,7 @@
 				<configuration>
 					<instrumentation>
 						<ignores>
-							<ignore>*Test</ignore>
+							<ignore>.*Test</ignore>
 							<ignore>org.lsc.opends.EmbeddedOpenDS</ignore>
 							<ignore>org.lsc.utils.LdapServer</ignore>
 						</ignores>
@@ -174,6 +174,14 @@
 						</excludes>
 					</instrumentation>
 				</configuration>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>cobertura</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 			<plugin>
 				<artifactId>maven-javadoc-plugin</artifactId>
