Major rewrite of BeanComparator. No public methods changed, but implementation is all new.

--- a/src/test/resources/lsc.properties
+++ b/src/test/resources/lsc.properties
@@ -65,13 +65,13 @@ lsc.tasks.ldap2ldapTestTask.srcService.baseDn = ou=ldap2ldap2TestTaskSrc,ou=Test
 lsc.tasks.ldap2ldapTestTask.srcService.pivotAttrs = cn sn
 lsc.tasks.ldap2ldapTestTask.srcService.filterAll = (&(sn=*))
 lsc.tasks.ldap2ldapTestTask.srcService.filterId = (sn={sn})
-lsc.tasks.ldap2ldapTestTask.srcService.attrs = description cn sn userPassword
+lsc.tasks.ldap2ldapTestTask.srcService.attrs = description cn sn userPassword telephoneNumber seeAlso
 lsc.tasks.ldap2ldapTestTask.dstService = org.lsc.jndi.SimpleJndiDstService
 lsc.tasks.ldap2ldapTestTask.dstService.baseDn = ou=ldap2ldap2TestTaskDst,ou=Test Data
 lsc.tasks.ldap2ldapTestTask.dstService.pivotAttrs = cn sn
 lsc.tasks.ldap2ldapTestTask.dstService.filterAll = (sn=*)
 lsc.tasks.ldap2ldapTestTask.dstService.filterId = (sn={sn})
-lsc.tasks.ldap2ldapTestTask.dstService.attrs = description cn objectClass userPassword sn telephoneNumber
+lsc.tasks.ldap2ldapTestTask.dstService.attrs = description cn objectClass userPassword sn telephoneNumber seeAlso
 
 lsc.syncoptions.ldap2ldapTestTask = org.lsc.beans.syncoptions.PropertiesBasedSyncOptions
 lsc.syncoptions.ldap2ldapTestTask.default.delimiter = ,
@@ -85,6 +85,7 @@ lsc.syncoptions.ldap2ldapTestTask.userPassword.force_value = "secret" + srcBean.
 lsc.syncoptions.ldap2ldapTestTask.telephoneNumber.action = M
 lsc.syncoptions.ldap2ldapTestTask.telephoneNumber.create_value = "000000", "11111"
 lsc.syncoptions.ldap2ldapTestTask.telephoneNumber.default_value = "123456", "789987"
+lsc.syncoptions.ldap2ldapTestTask.seeAlso.action = F
 
 lsc.tasks.db2ldapTestTask.bean = org.lsc.beans.personBean
 lsc.tasks.db2ldapTestTask.dn = "cn=" + srcBean.getAttributeValueById("givenName") + " " + + srcBean.getAttributeValueById("sn") + ",ou=db2ldap2TestTaskDst,ou=Test Data"
