Fixes #141. Add default and create values to destination even if they're not in the source object. Add tests to 1.1 branch and trunk for this case.

--- a/src/test/resources/lsc.properties
+++ b/src/test/resources/lsc.properties
@@ -54,14 +54,17 @@ lsc.tasks.ldap2ldapTestTask.dstService.baseDn = ou=ldap2ldap2TestTaskDst,ou=Test
 lsc.tasks.ldap2ldapTestTask.dstService.pivotAttrs = cn sn
 lsc.tasks.ldap2ldapTestTask.dstService.filterAll = (sn=*)
 lsc.tasks.ldap2ldapTestTask.dstService.filterId = (sn={sn})
-lsc.tasks.ldap2ldapTestTask.dstService.attrs = description cn objectClass userPassword sn telephoneNumber
+lsc.tasks.ldap2ldapTestTask.dstService.attrs = description cn objectClass userPassword sn telephoneNumber mail
 
 lsc.syncoptions.ldap2ldapTestTask = org.lsc.beans.syncoptions.PropertiesBasedSyncOptions
 lsc.syncoptions.ldap2ldapTestTask.default.delimiter = ,
 lsc.syncoptions.ldap2ldapTestTask.default.action = K
 lsc.syncoptions.ldap2ldapTestTask.description.action = M
 lsc.syncoptions.ldap2ldapTestTask.description.default_value = srcBean.getAttributeValueById("userPassword")
-lsc.syncoptions.ldap2ldapTestTask.objectclass.action = F
+lsc.syncoptions.ldap2ldapTestTask.objectclass.action = M
+lsc.syncoptions.ldap2ldapTestTask.objectclass.create_value = "inetOrgPerson"
+lsc.syncoptions.ldap2ldapTestTask.mail.create_value = "ok@domain.net"
+lsc.syncoptions.ldap2ldapTestTask.initials.create_value = "cn=oops"
 lsc.syncoptions.ldap2ldapTestTask.userPassword.action = F
 lsc.syncoptions.ldap2ldapTestTask.userPassword.force_value = "secret" + srcBean.getAttributeValueById("cn")
 lsc.syncoptions.ldap2ldapTestTask.telephoneNumber.action = M
