--- a/pom.xml
+++ b/pom.xml
@@ -321,6 +321,12 @@
 			<artifactId>slf4j-api</artifactId>
 			<version>1.5.8</version>
 		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>0.9.17</version>
+		</dependency>
+
 
 		<dependency>
 			<groupId>hsqldb</groupId>
