--- a/pom.xml
+++ b/pom.xml
@@ -359,10 +359,11 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>3.8.2</version>
+			<version>4.7</version>
 			<scope>test</scope>
+		 <type>jar</type>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.opends</groupId>
 			<artifactId>opends-core</artifactId>
@@ -455,3 +456,5 @@
 		</notifiers>
 	</ciManagement>
 </project>
+
+
