--- a/pom.xml
+++ b/pom.xml
@@ -125,40 +125,31 @@
 		<name>LSC project</name>
 		<url>http://lsc-project.org/</url>
 	</organization>
+
 	<build>
-		<sourceDirectory>${basedir}/src/main/java</sourceDirectory>
-		<testSourceDirectory>
-			${basedir}/src/test/java
-		</testSourceDirectory>
+
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<configuration>
-					<additionalClasspathElements>
-						<classpathElement>
-							${basedir}/src/test/java
-						</classpathElement>
-					</additionalClasspathElements>
-				</configuration>
 			</plugin>
+
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
 					<source>1.5</source>
 					<target>1.5</target>
 				</configuration>
+				<executions>
+					<execution>
+						<phase>compile</phase>
+						<goals>
+							<goal>compile</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
-			<!--
-				<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
-				<configuration>
-				<includes>
-				<include>src/test/**/*</include>
-				</includes>
-				</configuration>
-				</plugin> -->
+
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>cobertura-maven-plugin</artifactId>
@@ -174,15 +165,8 @@
 						</excludes>
 					</instrumentation>
 				</configuration>
-				<!--<executions>
-					<execution>
-						<phase>package</phase>
-						<goals>
-							<goal>cobertura</goal>
-						</goals>
-					</execution>
-				</executions>-->
 			</plugin>
+
 			<plugin>
 				<artifactId>maven-javadoc-plugin</artifactId>
 				<executions>
@@ -194,6 +178,7 @@
 					</execution>
 				</executions>
 			</plugin>
+
 			<plugin>
 				<artifactId>maven-antrun-plugin</artifactId>
 				<executions>
@@ -226,9 +211,8 @@
 				</executions>
 			</plugin>
 		</plugins>
-		<extensions>
-		</extensions>
 	</build>
+
 	<profiles>
 		<profile>
 			<id>jdk15</id>
@@ -249,6 +233,7 @@
 			</properties>
 		</profile>
 	</profiles>
+
 	<repositories>
 		<repository>
 			<id>IBiblio</id>
@@ -279,7 +264,32 @@
 			<url>http://lsc-project.org/maven</url>
 		</repository>
 	</repositories>
-	
+
+	<pluginRepositories>
+		<pluginRepository>
+			<id>Codehaus Snapshot</id>
+			<url>http://snapshots.repository.codehaus.org/</url>
+			<snapshots>
+				<enabled>true</enabled>
+				<updatePolicy>always</updatePolicy>
+			</snapshots>
+			<releases>
+				<enabled>false</enabled>
+			</releases>
+		</pluginRepository>
+		<pluginRepository>
+			<id>Codehaus</id>
+			<url>http://repository.codehaus.org/</url>
+			<snapshots>
+				<enabled>true</enabled>
+				<updatePolicy>always</updatePolicy>
+			</snapshots>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+		</pluginRepository>
+  </pluginRepositories>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.apache.ibatis</groupId>
@@ -361,7 +371,7 @@
 			<artifactId>junit</artifactId>
 			<version>4.7</version>
 			<scope>test</scope>
-		 <type>jar</type>
+			<type>jar</type>
 		</dependency>
 
 		<dependency>
@@ -376,6 +386,7 @@
 			<version>${jdk-version}-140</version>
 		</dependency>
 	</dependencies>
+
 	<reporting>
 		<outputDirectory>${basedir}/target/site</outputDirectory>
 		<plugins>
@@ -404,30 +415,7 @@
 
 		</plugins>
 	</reporting>
-	<pluginRepositories>
-		<pluginRepository>
-			<id>Codehaus Snapshot</id>
-			<url>http://snapshots.repository.codehaus.org/</url>
-			<snapshots>
-				<enabled>true</enabled>
-				<updatePolicy>always</updatePolicy>
-			</snapshots>
-			<releases>
-				<enabled>false</enabled>
-			</releases>
-		</pluginRepository>
-		<pluginRepository>
-			<id>Codehaus</id>
-			<url>http://repository.codehaus.org/</url>
-			<snapshots>
-				<enabled>true</enabled>
-				<updatePolicy>always</updatePolicy>
-			</snapshots>
-			<releases>
-				<enabled>true</enabled>
-			</releases>
-		</pluginRepository>
-	</pluginRepositories>
+
 	<distributionManagement>
 		<repository>
 			<id>lsc-project.org</id>
@@ -439,6 +427,7 @@
 			<uniqueVersion>false</uniqueVersion>
 		</snapshotRepository>
 	</distributionManagement>
+
 	<ciManagement>
 		<system>hudson</system>
 		<url>http://build.lsc-project.org/</url>
@@ -455,6 +444,7 @@
 			</notifier>
 		</notifiers>
 	</ciManagement>
+
 </project>
 
 
