--- a/sample/build.xml
+++ b/sample/build.xml
@@ -1,39 +1,35 @@
 <project name="lsc-sample">
 
-	<property name="sample.dir" value="." />
-	<property name="dbmonster.home" value="${sample.dir}/dbmonster" />
-	<property file="build.properties" />
-
 	<target name="createHsqlDB" unless="${execution.path}" description="Create the HsqlDB structure">
+		<echo>Creating database structure from SQL files</echo>
 		<property file="${sample.dir}/database.properties" />
-		<sql autocommit="true" caching="false" showheaders="true" classpathref="execution.path" driver="${driver}" password="${password}" url="${url}" userid="${username}" onerror="abort" src="${sample.dir}/sample-pregen.sql"/>
+		<sql autocommit="true" caching="false" showheaders="true" classpathref="execution.path" driver="${driver}" password="${password}" url="${url}" userid="${username}" onerror="abort" src="${sample.dir}/sample-pregen.sql" />
 	</target>
 
-	<target name="runDbMonster" description="Run the dbMonster tool to fill the inline HsqlDB database">
-		<available file="${dbmonster.home}" type="dir" property="dbmonster.home.ok" />
-		<antcall target="untarDbMonster"/>
-		<available file="${dbmonster.home}" type="dir" property="dbmonster.home.ok" />
-		<fail unless="dbmonster.home.ok" message="'dbmonster.home' must be set in build.properties" />
-		<path id="dbmonster.classpath">
+	<target name="runCsvToSql" description="Run the csvtosql tool to fill the inline HsqlDB database">
+		<copy todir="${sample.dir}/csvtosql" encoding='ISO8859-1' outputencoding='UTF-8'>
+			<fileset dir="${sample.dir}/csvtosql" includes="**/*.csv"/>
+			<mapper type="glob" from="*.csv" to="*-utf8.csv"/>
+		</copy>
+		<path id="csvtosql.path">
 			<path refid="execution.path"/>
-			<fileset dir="${dbmonster.home}" includes="**/*.jar" />
+			<fileset dir="${sample.dir}" includes="**/csvtosql.jar" />
 		</path>
-		<taskdef name="dbmonster" classname="pl.kernelpanic.dbmonster.ant.DBMonsterTask" classpathref="dbmonster.classpath" />
-
-		<!-- Adding close.sql to shutdown HsqlDB engine in order to be able to launch synchronization -->
-		<dbmonster config="${sample.dir}/dbmonster.properties" verbose="true" postscript="${sample.dir}/close.sql" >
-			<fileset dir="${sample.dir}" includes="dbmonster-schema.xml" />
-		</dbmonster>
+		<echo>Launching CsvToSql engine on ${source.name} CSV file</echo>
+                <java classname="net.sf.csv2sql.frontends.console.ConsoleMain" classpathref="csvtosql.path" fork="true" maxmemory="512M" dir="${build.classes.dir}">
+                        <arg line="-d '${sample.dir}/csvtosql/${source.name}.xml'" /> 
+                </java>
+		<concat destfile="${build.classes.dir}/sample.sql" append="true">
+			<fileset dir="${sample.dir}" includes="shutdown.sql"/>
+		</concat>
+		<property file="${sample.dir}/database.properties" />
+		<sql autocommit="true" caching="false" showheaders="true" classpathref="execution.path" driver="${driver}" password="${password}" url="${url}" userid="${username}" onerror="abort" src="${build.classes.dir}/sample.sql" />
 	</target>
 
-	<target name="all" depends="createHsqlDB,runDbMonster" description="run all sample tasks" />
-
-	<target name="untarDbMonster" description="Untar the dbmonster archive" unless="${dbmonster.home.ok}">
-		<untar src="${sample.dir}/dbmonster.tgz" compression="gzip" overwrite="false" dest="${sample.dir}"/>
-	</target>
-
-	<target name="clean" description="Remove the dbmonster directory">
-		<delete dir="${dbmonster.home}" />
+	<target name="all" depends="createHsqlDB,runCsvToSql" description="run all sample tasks" />
+	
+	<target name="clean" description="Clean the directory">
+		<delete file="${sample.dir}/csvtosql/sample-utf8.csv" />
 	</target>
 </project>
 
