--- a/sample/build.xml
+++ b/sample/build.xml
@@ -1,4 +1,24 @@
-<project name="lsc-sample">
+<!-- Use this Ant build file with : ant -Dsample.dir=`pwd`/sample -v -f sample/build.xml all -->
+<project name="lsc-sample" basedir=".." xmlns:artifact="urn:maven-artifact-ant">
+        <path id="maven-ant-tasks.classpath" path="${basedir}/lib/maven-ant-tasks-2.0.7.jar" />
+        <typedef resource="org/apache/maven/artifact/ant/antlib.xml" uri="urn:maven-artifact-ant" classpathref="maven-ant-tasks.classpath" />
+
+        <property name="maven.localRepository" value="${user.home}/.m2/repository" />
+        <property name="build.classes.dir" value="target/classes" />
+	<property name="source.name" value="sample" />
+
+        <artifact:remoteRepository id="remote.repository" url="http://lsc-project.org/maven" />
+        <artifact:pom id="pom" file="${basedir}/pom.xml" />
+        <artifact:localRepository id="localcache" path="${maven.localRepository}" />
+        <artifact:dependencies pathId="maven.classpath">
+                <pom refid="pom" />
+                <remoteRepository refid="remote.repository" />
+                <localrepository refid="localcache" />
+        </artifact:dependencies>
+
+        <path id="execution.path">
+                <path refid="maven.classpath" />
+        </path>
 
 	<target name="createHsqlDB" unless="${execution.path}" description="Create the HsqlDB structure">
 		<echo>Creating database structure from SQL files</echo>
