Moving to SimpleBean

--- a/src/test/resources/lsc.properties
+++ b/src/test/resources/lsc.properties
@@ -27,7 +27,8 @@ dst.java.naming.referral=ignore
 src.database.driver = org.hsqldb.jdbcDriver
 
 # Connection URL. This must include the database name.
-src.database.url = jdbc:hsqldb:hsql://localhost/test
+#src.database.url = jdbc:hsqldb:hsql://localhost/test
+src.database.url = jdbc:hsqldb:file:hsqldb/lsc
 
 # User name to connect to the database with
 src.database.username = sa
@@ -40,7 +41,7 @@ src.database.password =
 # All other values are prefixed by lsc.syncoptions
 ####
 
-lsc.tasks = sampleTask, ldap2ldapTestTask, db2ldapTestTask
+lsc.tasks = ldap2ldapTestTask, db2ldapTestTask
 
 lsc.tasks.sampleTask.srcService = org.lsc.service.InetOrgPersonJdbcService
 lsc.tasks.sampleTask.dstService = org.lsc.jndi.InetOrgPersonJndiService
@@ -58,7 +59,7 @@ lsc.syncoptions.sampleTask.JsAttribute.default_value = "uid=00000001" + ",ou=Peo
 lsc.syncoptions.sampleTask.DelimitedAttribute.delimiter = $
 lsc.syncoptions.sampleTask.DelimitedAttribute.force_value = "a"$"b" 
 
-lsc.tasks.ldap2ldapTestTask.bean = org.lsc.beans.personBean
+lsc.tasks.ldap2ldapTestTask.bean = org.lsc.beans.SimpleBean
 lsc.tasks.ldap2ldapTestTask.dn = "cn=" + srcBean.getAttributeValueById("cn") + ",ou=ldap2ldap2TestTaskDst,ou=Test Data"
 lsc.tasks.ldap2ldapTestTask.srcService = org.lsc.jndi.SimpleJndiSrcService
 lsc.tasks.ldap2ldapTestTask.srcService.baseDn = ou=ldap2ldap2TestTaskSrc,ou=Test Data
@@ -90,7 +91,7 @@ lsc.syncoptions.ldap2ldapTestTask.telephoneNumber.create_value = "000000", "1111
 lsc.syncoptions.ldap2ldapTestTask.telephoneNumber.default_value = "123456", "789987"
 lsc.syncoptions.ldap2ldapTestTask.seeAlso.action = F
 
-lsc.tasks.db2ldapTestTask.bean = org.lsc.beans.personBean
+lsc.tasks.db2ldapTestTask.bean = org.lsc.beans.SimpleBean
 lsc.tasks.db2ldapTestTask.dn = "cn=" + srcBean.getAttributeValueById("givenName") + " " + + srcBean.getAttributeValueById("sn") + ",ou=db2ldap2TestTaskDst,ou=Test Data"
 lsc.tasks.db2ldapTestTask.srcService = org.lsc.service.SimpleJdbcSrcService
 lsc.tasks.db2ldapTestTask.srcService.requestNameForList = getListTestDb2Ldap
