Adding first implementation of the asynchronous server mode

--- a/src/test/resources/lsc.properties
+++ b/src/test/resources/lsc.properties
@@ -61,11 +61,23 @@ lsc.syncoptions.sampleTask.DelimitedAttribute.force_value = "a"$"b"
 
 lsc.tasks.ldap2ldapTestTask.bean = org.lsc.beans.SimpleBean
 lsc.tasks.ldap2ldapTestTask.dn = "cn=" + srcBean.getAttributeValueById("cn") + ",ou=ldap2ldap2TestTaskDst,ou=Test Data"
-lsc.tasks.ldap2ldapTestTask.srcService = org.lsc.jndi.SimpleJndiSrcService
+#lsc.tasks.ldap2ldapTestTask.srcService = org.lsc.jndi.SimpleJndiSrcService
+# PoolableJndiSrcService provides the ability to lookup for updates
+lsc.tasks.ldap2ldapTestTask.srcService = org.lsc.jndi.PoolableJndiSrcService
 lsc.tasks.ldap2ldapTestTask.srcService.baseDn = ou=ldap2ldap2TestTaskSrc,ou=Test Data
 lsc.tasks.ldap2ldapTestTask.srcService.pivotAttrs = cn sn
 lsc.tasks.ldap2ldapTestTask.srcService.filterAll = (&(sn=*))
 lsc.tasks.ldap2ldapTestTask.srcService.filterId = (sn={sn})
+
+# The following three lines are valuable if lsc.tasks.ldap2ldapTestTask.srcService = org.lsc.jndi.PoolableJndiSrcService
+# filterAsync must contains a logical AND between the filterAll criterias and the timestamping criteria
+lsc.tasks.ldap2ldapTestTask.srcService.filterAsync = (&(sn=*)(modifytimestamp>={0}))
+# dateFormat is used by SimpleDateFormat to convert the Date object into a valuable string that will be injected
+# in filterAsync replacing {0}
+lsc.tasks.ldap2ldapTestTask.srcService.dateFormat = yyyyMMddHHmmss'Z'
+# interval specifies the number of seconds that the sleeping thread will be waked up to launch a partial task according to filterAsync  
+lsc.tasks.ldap2ldapTestTask.srcService.interval = 5 
+
 lsc.tasks.ldap2ldapTestTask.srcService.attrs = description cn sn userPassword telephoneNumber seeAlso
 lsc.tasks.ldap2ldapTestTask.dstService = org.lsc.jndi.SimpleJndiDstService
 lsc.tasks.ldap2ldapTestTask.dstService.baseDn = ou=ldap2ldap2TestTaskDst,ou=Test Data
@@ -91,6 +103,7 @@ lsc.syncoptions.ldap2ldapTestTask.telephoneNumber.create_value = "000000", "1111
 lsc.syncoptions.ldap2ldapTestTask.telephoneNumber.default_value = "123456", "789987"
 lsc.syncoptions.ldap2ldapTestTask.seeAlso.action = F
 
+lsc.tasks.db2ldapTestTask.async = false
 lsc.tasks.db2ldapTestTask.bean = org.lsc.beans.SimpleBean
 lsc.tasks.db2ldapTestTask.dn = "cn=" + srcBean.getAttributeValueById("givenName") + " " + + srcBean.getAttributeValueById("sn") + ",ou=db2ldap2TestTaskDst,ou=Test Data"
 lsc.tasks.db2ldapTestTask.srcService = org.lsc.service.SimpleJdbcSrcService
