--- a/pom.xml
+++ b/pom.xml
@@ -205,6 +205,7 @@
 						<configuration>
 							<tasks>
 								<property name="execution.path" refid="maven.runtime.classpath"></property>
+								<property name="plugin.path" refid="maven.plugin.classpath"></property>
 								<ant antfile="${basedir}/misc/build-runldap.xml" target="stopLdapServer"></ant>
 							</tasks>
 						</configuration>
